[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tython-tb"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "Tyler Bonnell", email = "tylerbonnell.j@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = []

[project.urls]
Documentation = "https://github.com/unknown/tython-tb#readme"
Issues = "https://github.com/unknown/tython-tb/issues"
Source = "https://github.com/unknown/tython-tb"

[tool.hatch.version]
path = "src/tython_tb/__about__.py"
