[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tython-tb"
version = "0.1.0"
description = 'A Python package consisting of functions developed by Tyler Bonnell.'
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
keywords = []
authors = [
  { name = "Tyler Bonnell", email = "tylerbonnell.j@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
dependencies = []

[project.urls]
Documentation = "https://github.com/unknown/tython-tb#readme"
Issues = "https://github.com/unknown/tython-tb/issues"
Source = "https://github.com/unknown/tython-tb"